# c3dio

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: read-write.rs  short-copy.c3d  simple.c3d  write-simple.rs
src/: analog.rs  builder.rs  bytes.rs  c3d.rs  data.rs  events.rs  forces.rs  header.rs  lib.rs  main.rs  manufacturer.rs  parameters.rs  parse.rs  points.rs  processor.rs  seg.rs
src/file_formats/: mod.rs  sto.rs  trc.rs
tests/: common.rs  debug.rs  features.md  incorrect-test-files.txt  non-writable.txt  test.rs  test_all_samples.rs  test_byte_and_file_parity.rs  test_c3d_org_samples.rs  test_no_points.rs  tests.rs
tests/c3d.org-sample-files/Sample03/: - readme.txt
tests/c3d.org-sample-files/Sample04/: - readme.txt
tests/c3d.org-sample-files/Sample05/: - readme.txt
tests/c3d.org-sample-files/Sample06/: - readme.txt
tests/c3d.org-sample-files/Sample09/: PolygonC3D.c3d  VER4C3D.c3d
tests/c3d.org-sample-files/Sample11/: - readme.txt
tests/c3d.org-sample-files/Sample12/: - readme.txt
tests/c3d.org-sample-files/Sample13/: - readme.txt  golfswing1.c3d
tests/c3d.org-sample-files/Sample14/: - readme.txt
tests/c3d.org-sample-files/Sample15/: - readme.txt
tests/c3d.org-sample-files/Sample16/: - readme.txt
tests/c3d.org-sample-files/Sample20/: phasespace_sample.c3d
tests/c3d.org-sample-files/Sample25/: analogfpscale03.c3d  analogfpscale04.c3d
tests/c3d.org-sample-files/Sample26/: - readme.txt
tests/c3d.org-sample-files/Sample27/: - readme.txt
tests/c3d.org-sample-files/Sample29/: - readme.txt
tests/data/: short-copy.c3d
tests/other/: test_byte_and_file_parity.rs
tests/write/: test_write_c3d.rs
(+80 files in other folders)
