[package]
name = "c3dio"
version = "0.2.0"
authors = ["Claire V. Hammond <claire@biomech.dev>"]
edition = "2021"
categories = ["encoding", "filesystem", "parser-implementation", "motion-capture", "biomechanics"]
description = "A library for reading and writing C3D files."
license = "MIT OR Apache-2.0"
homepage = "https://biomech.dev/c3dio"
repository = "https://github.com/cvhammond/c3dio"
readme = "README.md"
keywords = ["c3d", "parser", "motion-capture", "mocap", "biomechanics"]
exclude = ["tests", "tests/*", "examples", "examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32"

